Temporary stopgap for translations on separate pages

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -341,3 +341,7 @@ main .interproject-box {
 .interProject {
   display: none;
 }
+
+.pseudo {
+  margin-left: 1rem;
+}
